tests/suite/snapshots/suite__case_a6f9.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: Scalar
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 5
- token: MappingValue
  start:
    line: 0
    column: 5
  end:
    line: 0
    column: 6
- token: Separator
  start:
    line: 0
    column: 6
  end:
    line: 0
    column: 7
- token: Literal
  start:
    line: 0
    column: 7
  end:
    line: 0
    column: 8
- token: ChompingIndicator
  start:
    line: 0
    column: 8
  end:
    line: 0
    column: 9
- token: Break
  start:
    line: 0
    column: 9
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 2
- token: Scalar
  start:
    line: 1
    column: 2
  end:
    line: 1
    column: 6
- token: Break
  start:
    line: 1
    column: 6
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 0
- token: Scalar
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 4
- token: MappingValue
  start:
    line: 2
    column: 4
  end:
    line: 2
    column: 5
- token: Separator
  start:
    line: 2
    column: 5
  end:
    line: 2
    column: 6
- token: Literal
  start:
    line: 2
    column: 6
  end:
    line: 2
    column: 7
- token: Break
  start:
    line: 2
    column: 7
  end:
    line: 3
    column: 0
- token: Indent
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 2
- token: Scalar
  start:
    line: 3
    column: 2
  end:
    line: 3
    column: 6
- token: ScalarBreak
  start:
    line: 3
    column: 6
  end:
    line: 4
    column: 0
- token: Indent
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 0
- token: Scalar
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 4
- token: MappingValue
  start:
    line: 4
    column: 4
  end:
    line: 4
    column: 5
- token: Separator
  start:
    line: 4
    column: 5
  end:
    line: 4
    column: 6
- token: Literal
  start:
    line: 4
    column: 6
  end:
    line: 4
    column: 7
- token: ChompingIndicator
  start:
    line: 4
    column: 7
  end:
    line: 4
    column: 8
- token: Break
  start:
    line: 4
    column: 8
  end:
    line: 5
    column: 0
- token: Indent
  start:
    line: 5
    column: 0
  end:
    line: 5
    column: 2
- token: Scalar
  start:
    line: 5
    column: 2
  end:
    line: 5
    column: 6
- token: ScalarBreak
  start:
    line: 5
    column: 6
  end:
    line: 6
    column: 0

