tests/suite/snapshots/suite__case_ab8u.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: SequenceEntry
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 1
    line: 0
    column: 1
- token: Separator
  start:
    index: 1
    line: 0
    column: 1
  end:
    index: 2
    line: 0
    column: 2
- token: Scalar
  start:
    index: 2
    line: 0
    column: 2
  end:
    index: 18
    line: 0
    column: 18
- token: ScalarSpace
  start:
    index: 18
    line: 0
    column: 18
  end:
    index: 20
    line: 1
    column: 0
- token: Indent
  start:
    index: 20
    line: 1
    column: 0
  end:
    index: 21
    line: 1
    column: 1
- token: Scalar
  start:
    index: 21
    line: 1
    column: 1
  end:
    index: 37
    line: 1
    column: 17
- token: Break
  start:
    index: 37
    line: 1
    column: 17
  end:
    index: 39
    line: 2
    column: 0

