tests/suite/snapshots/suite__case_azw3.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: SequenceEntry
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 1
    line: 0
    column: 1
- token: Indent
  start:
    index: 1
    line: 0
    column: 1
  end:
    index: 2
    line: 0
    column: 2
- token: Scalar
  start:
    index: 2
    line: 0
    column: 2
  end:
    index: 10
    line: 0
    column: 10
- token: MappingValue
  start:
    index: 10
    line: 0
    column: 10
  end:
    index: 11
    line: 0
    column: 11
- token: Separator
  start:
    index: 11
    line: 0
    column: 11
  end:
    index: 12
    line: 0
    column: 12
- token: Scalar
  start:
    index: 12
    line: 0
    column: 12
  end:
    index: 15
    line: 0
    column: 15
- token: Break
  start:
    index: 15
    line: 0
    column: 15
  end:
    index: 17
    line: 1
    column: 0
- token: Indent
  start:
    index: 17
    line: 1
    column: 0
  end:
    index: 17
    line: 1
    column: 0
- token: SequenceEntry
  start:
    index: 17
    line: 1
    column: 0
  end:
    index: 18
    line: 1
    column: 1
- token: Indent
  start:
    index: 18
    line: 1
    column: 1
  end:
    index: 19
    line: 1
    column: 2
- token: Scalar
  start:
    index: 19
    line: 1
    column: 2
  end:
    index: 27
    line: 1
    column: 10
- token: MappingValue
  start:
    index: 27
    line: 1
    column: 10
  end:
    index: 28
    line: 1
    column: 11
- token: Separator
  start:
    index: 28
    line: 1
    column: 11
  end:
    index: 29
    line: 1
    column: 12
- token: Scalar
  start:
    index: 29
    line: 1
    column: 12
  end:
    index: 32
    line: 1
    column: 15
- token: Break
  start:
    index: 32
    line: 1
    column: 15
  end:
    index: 34
    line: 2
    column: 0

