tests/suite/snapshots/suite__case_bd7l.snap
---
source: tests/suite/cases.gen.rs
expression: diagnostics
---
- message: "remaining tokens: \"invalid: x\\r\\n\""
  start:
    index: 18
    line: 2
    column: 0
  end:
    index: 18
    line: 2
    column: 0

