tests/suite/snapshots/suite__case_bf9h.snap
---
source: tests/suite/cases.gen.rs
expression: diagnostics
---
- message: "remaining tokens: \"       c\\r\\n\""
  start:
    index: 41
    line: 3
    column: 0
  end:
    index: 41
    line: 3
    column: 0

