tests/suite/snapshots/suite__case_bs4k.snap
---
source: tests/suite/cases.gen.rs
expression: diagnostics
---
- message: invalid document
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 0

