tests/suite/snapshots/suite__case_bu8l.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: Scalar
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 3
    line: 0
    column: 3
- token: MappingValue
  start:
    index: 3
    line: 0
    column: 3
  end:
    index: 4
    line: 0
    column: 4
- token: Separator
  start:
    index: 4
    line: 0
    column: 4
  end:
    index: 5
    line: 0
    column: 5
- token: Anchor
  start:
    index: 5
    line: 0
    column: 5
  end:
    index: 6
    line: 0
    column: 6
- token: AnchorName
  start:
    index: 6
    line: 0
    column: 6
  end:
    index: 12
    line: 0
    column: 12
- token: Break
  start:
    index: 12
    line: 0
    column: 12
  end:
    index: 14
    line: 1
    column: 0
- token: Indent
  start:
    index: 14
    line: 1
    column: 0
  end:
    index: 15
    line: 1
    column: 1
- token: TagHandle
  start:
    index: 15
    line: 1
    column: 1
  end:
    index: 17
    line: 1
    column: 3
- token: TagSuffix
  start:
    index: 17
    line: 1
    column: 3
  end:
    index: 20
    line: 1
    column: 6
- token: Break
  start:
    index: 20
    line: 1
    column: 6
  end:
    index: 22
    line: 2
    column: 0
- token: Indent
  start:
    index: 22
    line: 2
    column: 0
  end:
    index: 24
    line: 2
    column: 2
- token: Scalar
  start:
    index: 24
    line: 2
    column: 2
  end:
    index: 25
    line: 2
    column: 3
- token: MappingValue
  start:
    index: 25
    line: 2
    column: 3
  end:
    index: 26
    line: 2
    column: 4
- token: Separator
  start:
    index: 26
    line: 2
    column: 4
  end:
    index: 27
    line: 2
    column: 5
- token: Scalar
  start:
    index: 27
    line: 2
    column: 5
  end:
    index: 28
    line: 2
    column: 6
- token: Break
  start:
    index: 28
    line: 2
    column: 6
  end:
    index: 30
    line: 3
    column: 0

